added print_data_frame_for_entry function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(gg_widths_equal)
 export(gis_longitude_to_utm_zone)
 export(gis_utm_zone_to_proj4)
 export(obj_size)
+export(print_data_frame_for_entry)
 export(repo_create_gdrive_symlink)
 export(repo_init)
 export(repo_setup_guide)
