--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,7 @@ RoxygenNote: 6.1.1
 Suggests: 
     testthat,
     akima,
-    dplyr
+    dplyr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
