clean build (with warnings) added crore_to_usd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 S3method("%=%",lbunch)
 export("%=%")
+export("%>%")
 export(akima_bilinear)
 export(bound_vec)
+export(crore_to_usd)
 export(fig_get_gdrive_path)
 export(fig_set_output)
 export(g)
@@ -21,3 +23,4 @@ export(scalebar_geoms)
 export(t_manu)
 export(t_pres)
 importFrom(dplyr,"%>%")
+importFrom(magrittr,"%>%")
