--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,25 @@
 Package: ggp
 Type: Package
-Title: What the Package Does (Title Case)
+Title: General functions for coding assistance
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Gopal Penny
+Maintainer: Gopal Penny <gopalpenny@gmail.com>
+Description: This package provides a number of functions for
+    repository maintenance, spatial support, and other small thing
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
 Suggests: 
     testthat,
-    akima,
-    dplyr,
     knitr,
     rmarkdown
 Imports:
-    R.utils
+    R.utils,
+    akima,
+    dplyr,
+    ggplot2,
+    tibble,
+    devtools,
+    magrittr
 VignetteBuilder: knitr
